--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,10 +1,10 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
+} */
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -25,7 +25,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
