--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,600;1,300&display=swap');
+
+* {
+margin: 0;
+padding: 0;
+border:0;
+outline: 0;
+list-style: none;
+text-decoration: none;
+}
+
+:root{
+--color-bg : #1f1f38;
+--color-bg-variant: #2c2c6c;
+--color--primary: #4db5ff;
+--color-primary-variant: rgba(77,181,255,0.4);
+--color-white: #fff;
+--color-light: rgba(255,255,255,0.6);
+--container-width-lg: 75%;
+--container-width-md: 86%;
+--container-width-ms:90%;
+}
 .profilePicture{
 
   height: 80px;
@@ -8,4 +30,31 @@
   border-radius: 30%;
   padding: 1rem;
   margin-left: 2.5rem;
+}
+h1{
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+h2{
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+
+}
+body{
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--color-bg);
+  color: var(--color-white);
+  line-height: 1.7;
+  background-image: url(/portfolio/src/assets/text.avif);
+
+}
+html{
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+  display:none;
+
 }
