--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -30,7 +30,7 @@ ul{
 }
 .profilePicture{
 
-  height: 80px;
+  height: 60px;
   border-radius: 50%;
 }
 .socials{
@@ -43,11 +43,15 @@ h1{
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-style: italic;
+  white-space: nowrap;
+
 }
 h2{
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-style: normal;
+  white-space: nowrap;
+
 
 }
 body{
