--- a/portfolio/styles/resourcesStyles/SideBar.css
+++ b/portfolio/styles/resourcesStyles/SideBar.css
@@ -52,31 +52,7 @@ body {
     position: relative;
   }
   
-  .sidebar-links h4 span {
-    opacity: 0;
-  }
-  
-  .sidebar:hover .sidebar-links h4 span {
-    opacity: 1;
-  }
-  
-  .sidebar-links .menu-separator {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    height: 1px;
-    transform: scaleX(1);
-    transform: translateY(-50%);
-    background: #4f52ba;
-    transform-origin: right;
-    transition-delay: 0.2s;
-  }
-  
-  .sidebar:hover .sidebar-links .menu-separator {
-    transition-delay: 0s;
-    transform: scaleX(0);
-  }
+ 
   
   .sidebar-links {
     list-style: none;
@@ -108,40 +84,22 @@ body {
     border-radius: 4px;
   }
   
-  .user-account {
-    margin-top: auto;
-    padding: 12px 10px;
-    margin-left: -10px;
-  }
   
-  .user-profile {
-    display: flex;
-    align-items: center;
-    color: #161a2d;
-  }
-  
-  .user-profile img {
-    width: 42px;
+  .profilePicture{
+
+    height: 60px;
     border-radius: 50%;
-    border: 2px solid #fff;
+  }
+
+  .icons{
+    height: 20px;
+    margin-bottom: -4px;
+    margin-right: 1rem;
   }
   
-  .user-profile h3 {
-    font-size: 1rem;
-    font-weight: 600;
-  }
-  
-  .user-profile span {
-    font-size: 0.775rem;
-    font-weight: 600;
-  }
-  
-  .user-detail {
-    margin-left: 23px;
-    white-space: nowrap;
-  }
-  
-  .sidebar:hover .user-account {
-    background: #fff;
-    border-radius: 4px;
+  .socials{
+    height: 40px;
+    border-radius: 30%;
+    padding: 0.5rem;
+    margin-left: 2rem;
   }
