--- a/portfolio/styles/resourcesStyles/CardStyle.css
+++ b/portfolio/styles/resourcesStyles/CardStyle.css
@@ -1,44 +1,56 @@
 :root {
-    --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+  --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+}
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
   }
-  
-  .cardStyle {
-    
-    border-radius: 20px;
-    background: #4d4a4a;
-    background: radial-gradient(#050414, #1b033ba2);
-    border: 1px solid #dd2476;
-    color: rgba(250, 250, 250, 0.8);
-    margin-left: 10rem;
-    margin-right: 5rem;
-    padding: 3rem; 
-    transition: box-shadow 0.3s ease;
-    text-align: center;
-    color: #fff;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
-  }
-  
-  .cardImage {
-    border-radius: 20px;
-    width: 100%;
-    height: auto;
-  }
-  
-  .external {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .external:hover {
-    color: #dd2476; 
-  }
+.cardStyle {
+  border-radius: 20px;
+  background: #4d4a4a;
+  background: radial-gradient(#050414, #1b033ba2);
+  border: 1px solid #dd2476;
+  color: rgba(250, 250, 250, 0.8);
+  margin-left: 16.25rem;
+  margin-right: 5rem;
+  padding: 3rem;
+  max-width: 800px;
+  transition: box-shadow 0.3s ease;
+  text-align: center;
+  color: #fff;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  opacity: 0; 
+  animation: fadeInUp 0.6s forwards;
+  animation-delay: calc(0.5s * var(--animation-order));
+}
+
+.cardImage {
+  border-radius: 20px;
+  width: 100%;
+  height: auto;
+}
+
+.external {
+  color: #fff;
+  text-decoration: none;
+}
+
+.external:hover {
+  color: #dd2476;
+}
 
 .cardStyle p {
-    margin-bottom: 1rem;
-    line-height: 1.6;
-    text-align: left;
+  margin-bottom: 1rem;
+  line-height: 1.6;
+  text-align: left;
 }
 
 .cardStyle li {
@@ -48,17 +60,19 @@
   color: rgba(250, 250, 250, 0.9);
   padding: 0.5rem;
   transition: box-shadow 0.3s ease;
-  max-width: 800px;
-    list-style-type: none;
-    margin-bottom: 1rem;
+  list-style-type: none;
+  margin-bottom: 1rem;
+  opacity: 0; 
+  animation: fadeInUp 0.6s forwards;
+  animation-delay: calc(0.5s * var(--animation-order)); /* Delay for staggered effect */
 }
 
 .cardStyle li p {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.swipperCardStyle li p::before {
-    content: "👉";
-    margin-right: 0.5rem;
+.cardStyle li p::before {
+  content: "👉";
+  margin-right: 0.5rem;
 }
