--- a/portfolio/styles/resourcesStyles/CardStyle.css
+++ b/portfolio/styles/resourcesStyles/CardStyle.css
@@ -18,13 +18,13 @@
   background: radial-gradient(#050414, #1b033ba2);
   border: 1px solid #dd2476;
   color: rgba(250, 250, 250, 0.8);
-  margin-left: 16.25rem;
-  margin-right: 5rem;
   padding: 3rem;
   max-width: 800px;
   transition: box-shadow 0.3s ease;
   text-align: center;
   color: #fff;
+  margin: 0 auto;
+  float: none;
   margin-top: 3rem;
   margin-bottom: 3rem;
   opacity: 0; 
@@ -37,7 +37,11 @@
   width: 100%;
   height: auto;
 }
+.cardImage2{
+  border-radius: 20px;
 
+  height: auto;
+}
 .external {
   color: #fff;
   text-decoration: none;
