--- a/portfolio/styles/resourcesStyles/CardStyle.css
+++ b/portfolio/styles/resourcesStyles/CardStyle.css
@@ -13,6 +13,7 @@
 }
 
 .cardStyle {
+  position: relative;
   border-radius: 20px;
   background: #4d4a4a;
   background: radial-gradient(#050414, #1b033ba2);
