--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -29,6 +29,12 @@ h1{
   font-weight: 300;
   font-style: italic;
   white-space: nowrap;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin: 0;
+  padding: 0;
+  flex-grow: 1;
+  z-index: 1
 
 }
 h2{
