added images, finished Hobbies component and corrected grammar

--- a/portfolio/styles/resourcesStyles/SideBar.css
+++ b/portfolio/styles/resourcesStyles/SideBar.css
@@ -99,6 +99,11 @@ body {
     margin-bottom: -4px;
     margin-right: 1rem;
   }
+  .iconFire{  
+    height: 20px;
+    margin-bottom: -4px;
+    margin-left: -21.5px;
+    }
   
   .socials{
     height: 40px;
