--- a/portfolio/styles/resourcesStyles/CardStyle.css
+++ b/portfolio/styles/resourcesStyles/CardStyle.css
@@ -75,7 +75,7 @@
   margin-bottom: 1rem;
   opacity: 0; 
   animation: fadeInUp 0.6s forwards;
-  animation-delay: calc(0.5s * var(--animation-order)); /* Delay for staggered effect */
+  animation-delay: calc(0.5s * var(--animation-order)); 
 }
 
 .cardStyle li p {
