--- a/portfolio/styles/resourcesStyles/ContactCard.css
+++ b/portfolio/styles/resourcesStyles/ContactCard.css
@@ -54,13 +54,15 @@ p {
     left: 30px;
 }
 
+
 .card-container .profilePictureRound {
     border: 3px solid #03BFCB;
     border-radius: 50%;
     padding: 7px;
     margin-top: 20px;
-    height:200px;
-    width: 120px;
+    width: 150px; /* Ensure width and height are equal */
+    height: 150px;
+    object-fit: cover; /* Ensure the image covers the circle area */
 }
 
 
