--- a/portfolio/styles/resourcesStyles/PhotoAlbum.css
+++ b/portfolio/styles/resourcesStyles/PhotoAlbum.css
@@ -45,3 +45,46 @@
     offset-distance: 90%;
   }
   
+  @media (max-width: 768px) {
+    .pAlbum {
+      padding: 1rem;
+      margin: auto;
+      height: 150px;
+      width: 500px;
+
+    }
+  
+  
+      .imageAlbum {
+        height:80px;
+      }
+   
+  
+    .imageAlbum:hover {
+      transform: scale(2.5);
+    }
+    .imageAlbum:nth-last-child(3):first-child {
+    offset-distance: 55%;
+  }
+  .imageAlbum:nth-last-child(2):nth-child(2) {
+    offset-distance: 35%;
+  }
+  .imageAlbum:last-child:nth-child(3) {
+    offset-distance: 70%;
+  }
+  
+  .imageAlbum:nth-last-child(4):first-child {
+    offset-distance: 70%;
+
+  }
+  .imageAlbum:nth-last-child(3):nth-child(2) {
+    offset-distance: 35%;
+  }
+  .imageAlbum:nth-last-child(2):nth-child(3) {
+    offset-distance: 65%;
+  }
+  .imageAlbum:last-child:nth-child(4) {
+    offset-distance: 50%;
+  }
+ 
+  }
