--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -50,7 +50,6 @@ body{
   background-color: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(/portfolio/src/assets/text.avif);
 
 }
 html{
@@ -76,4 +75,18 @@ color: #fff;
 border-radius:  4px;
 
 
+}
+
+@media (max-width: 768px){
+  h1{
+    font-family: "Poppins", sans-serif;
+    font-style: italic;
+    white-space: nowrap;
+    font-size: 25px;
+
+  }
+  h2{
+    font-family: "Poppins", sans-serif;
+font-size: 17px;
+  }
 }
