--- a/portfolio/styles/resourcesStyles/SkillsStyles.css
+++ b/portfolio/styles/resourcesStyles/SkillsStyles.css
@@ -69,3 +69,38 @@
     width: 100%;
     max-width: 420px;
   }
+
+  @media (max-width: 700px) {
+    .card{
+      margin-left: 3rem;
+      width: 300px;
+      padding: 10px;
+    }
+    .card.frontend{
+      margin-left: 0.55rem;
+      width:300px;
+      padding: 10px;
+    }
+    .skillsContainer {
+      padding: rem;
+      margin-top: 1rem;
+      gap: 10px;
+    }
+  
+    .skillsRow {
+      flex-direction: column;
+      gap: 10px;
+    }
+  
+ 
+  
+    .card h4 {
+      margin-left:50% auto;
+      margin-right:50% auto;
+      margin-bottom: 10px;
+    }
+  
+    .card ul {
+      font-size: 0.9rem;
+    }
+  }
