--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -82,11 +82,14 @@ border-radius:  4px;
     font-family: "Poppins", sans-serif;
     font-style: italic;
     white-space: nowrap;
-    font-size: 25px;
+    font-size: 20px;
 
   }
   h2{
     font-family: "Poppins", sans-serif;
 font-size: 17px;
+  }
+  body {
+    padding: 0 0.5rem;
   }
 }
