--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -50,7 +50,7 @@ body{
   background-color: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-
+  overflow-x: hidden;
 }
 html{
   scroll-behavior: smooth;
