--- a/portfolio/styles/resourcesStyles/SkillsStyles.css
+++ b/portfolio/styles/resourcesStyles/SkillsStyles.css
@@ -96,6 +96,35 @@
       margin-right:50% auto;
       margin-bottom: 10px;
     }
-  
+    .card.frontend h4{
+      margin-top: 6px
+        
+      }
+      
  
   }
+  
+ 
+@media (max-height: 500px) {
+  .skillsContainer {
+    margin-top: 1rem;
+  }
+
+  .skillsRow {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .skillsContainer .card {
+    width: calc(50% - 10px);
+    margin: 5px;
+  }
+.card.frontend h4{
+margin-top: 6px
+  
+}
+
+  
+
+}
