--- a/portfolio/styles/resourcesStyles/ContactCard.css
+++ b/portfolio/styles/resourcesStyles/ContactCard.css
@@ -69,6 +69,7 @@ p {
 
 
 .card-container .profilePictureRound {
+    animation: fadeIn 4s ;
     border: 3px solid #03BFCB;
     border-radius: 50%;
     padding: 7px;
