--- a/portfolio/styles/resourcesStyles/SideBar.css
+++ b/portfolio/styles/resourcesStyles/SideBar.css
@@ -41,7 +41,10 @@ body {
       transform: translateY(1.5rem)
     }
   }
+ .listContainer{
+  animation: fadeIn 1s;
  
+ }
   
   .sidebar .sidebar-header {
     display: flex;
