--- a/portfolio/styles/resourcesStyles/SideBar.css
+++ b/portfolio/styles/resourcesStyles/SideBar.css
@@ -110,8 +110,10 @@ body {
 }
   
   .profilePicture{
-
+    width: 60px; 
     height: 60px;
+    object-fit: cover; 
+ 
     border-radius: 50%;
   }
 
