--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -16,9 +16,7 @@ text-decoration: none;
 --color-primary-variant: rgba(77,181,255,0.4);
 --color-white: #fff;
 --color-light: rgba(255,255,255,0.6);
---container-width-lg: 75%;
---container-width-md: 86%;
---container-width-ms:90%;
+
 }
 ul{
   padding: 15px;
@@ -75,6 +73,20 @@ color: #fff;
 border-radius:  4px;
 
 
+}
+.switch{
+  height: 90px;
+  margin-left:11rem;
+
+}
+.test{
+  color: yellow
+}
+.dark{
+  color: black
+}
+.light{
+  color: lightblue;
 }
 
 @media (max-width: 768px){
