--- a/portfolio/styles/resourcesStyles/SkillsStyles.css
+++ b/portfolio/styles/resourcesStyles/SkillsStyles.css
@@ -17,13 +17,27 @@
     width: 100%;
     justify-content: center;
   }
-  
+  .dark .card{
+    background: #4d4a4a;
+    background: radial-gradient(#1106aa, #4d297ba2);
+    border: 1px solid #dd2476;
+    color: rgba(250, 250, 250, 0.8);
+  }
+
+  .light .card{
+    background: #4d4a4a;
+    background: radial-gradient(#4be6d9, #e2e2e2);
+    border: 1px solid#141414;
+    h4{
+      color: #141414;
+    }
+  }
   .card {
     background: #4d4a4a;
     background: radial-gradient(#1106aa, #4d297ba2);
     border: 1px solid #dd2476;
     border-radius: 20px;
-    color: rgba(250, 250, 250, 0.8);
+   
     padding: 20px;
     width: 200px;
     transition: box-shadow 0.3s ease;
