--- a/portfolio/styles/resourcesStyles/ContactCard.css
+++ b/portfolio/styles/resourcesStyles/ContactCard.css
@@ -177,9 +177,12 @@ p {
 @media (max-width: 768px) {
 
     .card-container {
-        
     margin-left: 15rem;
     margin-right: 10rem;
+    }
+    .cardBody{
+        margin-left: 3.5rem;
+        margin-right: 3rem;
     }
 
     .card-container .profilePictureRound {
