--- a/portfolio/styles/resourcesStyles/CardStyle.css
+++ b/portfolio/styles/resourcesStyles/CardStyle.css
@@ -13,8 +13,8 @@
 }
 .dark .cardStyle{
   background: #4d4a4a;
-  background: radial-gradient(#050414, #1b033ba2);
-  border: 1px solid #dd2476;
+  background: radial-gradient(#31115ca2 ,#050414);
+  border: 1px solid #43125f;
   color: rgba(250, 250, 250, 0.8);
   
 
@@ -24,13 +24,16 @@
   background: radial-gradient(#ffffff, #33d6ada2);
   border: 1px solid #0c382d;
   color: rgba(0, 0, 0, 0.8);
-  p{ color: #050414;}
+
+  p{ color: #000000;}
   li{  background: radial-gradient(#4be6d9, #e2e2e2);
     border: 1px solid #0c382d;
     color: rgba(250, 250, 250, 0.9);
 
   }
-
+  li::before {
+    content: "👉🏽";
+  }
   .gigtasticLink{
     color: #152ba8;
   }
@@ -42,6 +45,8 @@
   border-radius: 20px;
   padding: 3rem;
   max-width: 800px;
+  box-shadow: 0px 20px 30px -10px rgb(0, 0, 0);
+
   transition: box-shadow 0.3s ease;
   text-align: center;
   margin: 0 auto;
@@ -92,8 +97,8 @@
 
 .cardStyle li {
   border-radius: 20px;
-  background: radial-gradient(#1b1b1b, #333);
-  border: 1px solid #dd2476;
+  background: radial-gradient( #340c69a2 ,#050414);
+  border: 1.5px solid  #3d1355;
   color: rgba(250, 250, 250, 0.9);
   padding: 0.5rem 0.5rem 0.5rem 2rem; 
   transition: box-shadow 0.3s ease;
