added fading effect to navbar

--- a/portfolio/styles/resourcesStyles/ContactCard.css
+++ b/portfolio/styles/resourcesStyles/ContactCard.css
@@ -17,7 +17,7 @@
 .light .cardBody{
     background-color: #a6cfff;
     .card-container{
-        background-color: #68a5e7;
+        background-color: #79abe0;
     }
     h3, h6, p{
         color: #000000;
