--- a/portfolio/styles/resourcesStyles/SwitchS.css
+++ b/portfolio/styles/resourcesStyles/SwitchS.css
@@ -13,13 +13,28 @@
    margin-left: 10rem ;
    margin-top: 0.5rem;
   }
-  
+  .switchContainer{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2rem;
+  }
   .switch input {
    opacity: 0;
    width: 0;
    height: 0;
   }
+.switchIconSun{
+  height: 2rem;
+  margin-left: 1rem;
+  margin-bottom: -20px;
   
+}
+  .switchIcon{
+    margin-left: 1.5rem;
+    height: 1rem;
+    margin-top: 0.5rem;
+  }
   .slider {
    box-sizing: border-box;
    border: 2px solid var(--outline_color);
