--- a/portfolio/styles/resourcesStyles/SideBar.css
+++ b/portfolio/styles/resourcesStyles/SideBar.css
@@ -5,6 +5,9 @@
 }
 .dark{
   .sidebar {
+    -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -37,6 +40,9 @@
 
 .light{
   .sidebar {
+    -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
     position: fixed;
     top: 0;
     left: 0;
