--- a/portfolio/styles/resourcesStyles/ContactCard.css
+++ b/portfolio/styles/resourcesStyles/ContactCard.css
@@ -83,7 +83,7 @@ p {
 
 .card-container {
     
-    background-color: #231E39;
+    background-color:#171523;
     border-radius: 5px;
     box-shadow: 0px 20px 30px -10px rgb(0, 0, 0);
     color: #B3B8CD;
